ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${DEPLOY_NAME}-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: ${ACM_ARN}
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/group.name: app-group
  labels:
    service: ${DEPLOY_NAME}-ingress
spec:
  rules:
    - host: green.devopsforall.tk
      http:
       paths:
       - path: /
         pathType: Prefix
         backend:
          service:
            name: ${DEPLOY_NAME}-service
            port:
              number: 80
